sync_files.sh: added use of rsync filter merge files to select files for sync
- add mandatory parameter <append-filter-file>
- add optional parameter <sync-filter-file>
- add filter merge files for EB, T, SCI and SOD
- add those filter files to the DIST

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 # have all needed files, that a GNU package needs
 AUTOMAKE_OPTIONS = foreign 1.4
 
-SUBDIRS = bin etc src 
+SUBDIRS = bin etc etc/rsync src 
 
 EXTRA_DIST = kitcube-tools.doxygen.in kitcube-tools.spec.in 
 
