--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -595,6 +595,30 @@ datafileTemplate = M12_01.DAX.template
 samplingTime = 10 min
 
 
+[PT20-dal]
+moduleName = PT20
+moduleNumber = 13
+moduleType = Mast
+moduleComment = profile_tower
+sensorGroup = DAL
+datafileMask = messwiese<index>.DAL
+sensorList = PT20.DAL.sensors
+datafileTemplate = M12_01.DAL.template
+samplingTime = 1 sec
+
+
+[PT20-dar]
+moduleName = PT20
+moduleNumber = 13
+moduleType = Mast
+moduleComment = profile_tower
+sensorGroup = DAR
+datafileMask = messwiese<index>.DAR
+sensorList = PT20.DAR.sensors
+datafileTemplate = M12_01.DAR.template
+samplingTime = 10 min
+
+
 [Ceilometer]
 moduleType = Ceilometer
 moduleNumber = 20
