--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -595,6 +595,9 @@ datafileTemplate = M12_01.DAX.template
 samplingTime = 10 min
 
 
+; 20m profile tower
+
+; Sampling rate 1Hz
 [PT20-dal]
 moduleName = PT20
 moduleNumber = 13
@@ -606,7 +609,7 @@ sensorList = PT20.DAL.sensors
 datafileTemplate = M12_01.DAL.template
 samplingTime = 1 sec
 
-
+; Mean data of 10min intervals
 [PT20-dar]
 moduleName = PT20
 moduleNumber = 13
