--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 AC_INIT(configure.in)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(kitcube-tools, 0.12)
+AM_INIT_AUTOMAKE(kitcube-tools, 0.13)
 
 
 AC_LANG_CPLUSPLUS
@@ -11,8 +11,8 @@ AM_PROG_LIBTOOL
 dnl
 dnl Add the base include directory
 dnl
-CXXFLAGS="-I.. -I../../fdhwlib/src -Wall -g"
-CFLAGS="-I.. -I../../fdhwlib/src -Wall -g"
+CXXFLAGS="-I.. -I../../fdhwlib/src -Wall -g -O2"
+CFLAGS="-I.. -I../../fdhwlib/src -Wall -g -O2"
 
 AC_PROG_CXX
 
