--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -789,25 +789,47 @@ datafileTemplate = data.csv.template
 datafileMask = <index>.sonic.csv
 samplingTime = 0.03125 sec
 
-[WT20-base]
-moduleName = WT20
+[WTH-base]
+moduleName = WTH
 moduleNumber = 60
 moduleType = windtracer
 moduleComment = Windtracer20_base
 sensorGroup = base
-datafileMask = 20<index>_134446_base.prd
-sensorList = WT20.base.sensors
+datafileMask = 20<index>_base.prd
+sensorList = WTH.base.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
 
-[WT20-spectral]
-moduleName = WT20
+[WTH-spectral]
+moduleName = WTH
 moduleNumber = 60
 moduleType = windtracer
 moduleComment = Windtracer20_spectral
 sensorGroup = spectral
-datafileMask = 20<index>_134446_spectral.prd
-sensorList = WT20.spectral.sensors
+datafileMask = 20<index>_spectral.prd
+sensorList = WTH.spectral.sensors
+datafileTemplate = 20090729_134446_base.prd.template
+samplingTime = 10 min
+
+[WTX-base]
+moduleName = WTX
+moduleNumber = 61
+moduleType = windtracer
+moduleComment = Windtracer20_base
+sensorGroup = base
+datafileMask = 20<index>_base.prd
+sensorList = WTX.base.sensors
+datafileTemplate = 20090729_134446_base.prd.template
+samplingTime = 10 min
+
+[WTX-spectral]
+moduleName = WTX
+moduleNumber = 61
+moduleType = windtracer
+moduleComment = Windtracer20_spectral
+sensorGroup = spectral
+datafileMask = 20<index>_spectral.prd
+sensorList = WTX.spectral.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
 
