3M: new module number 15

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -622,6 +622,45 @@ datafileTemplate = M12_01.DAR.template
 samplingTime = 10 min
 
 
+; 3M Mast
+
+; misc. data
+[3M-data]
+moduleName = 3M
+moduleNumber = 15
+moduleType = 3M
+moduleComment = 3M_data
+sensorGroup = data
+sensorList = 3M.data.sensors
+datafileTemplate = data.csv.template
+datafileMask = 20<index>.data.csv
+samplingTime = 5 sec
+
+; GPS coordinates
+[3M-gps]
+moduleName = 3M
+moduleNumber = 15
+moduleType = 3M
+moduleComment = 3M_gps
+sensorGroup = gps
+sensorList = 3M.gps.sensors
+datafileTemplate = data.csv.template
+datafileMask = <index>.gps.csv
+samplingTime = 60 min
+
+; wind data
+[3M-sonic]
+moduleName = 3M
+moduleNumber = 15
+moduleType = 3M
+moduleComment = 3M_sonic
+sensorGroup = sonic
+sensorList = 3M.sonic.sensors
+datafileTemplate = data.csv.template
+datafileMask = <index>.sonic.csv
+samplingTime = 0.03125 sec
+
+
 [Ceilometer]
 moduleType = Ceilometer
 moduleNumber = 20
@@ -755,39 +794,6 @@ sensorList = scintillometer.RES.sensors
 datafileTemplate = 100727.RES.template
 datafileMask = <index>.RES
 samplingTime = 1 min
-
-[3M-data]
-moduleName = 3M
-moduleNumber = 55
-moduleType = 3M
-moduleComment = 3M_data
-sensorGroup = data
-sensorList = 3M.data.sensors
-datafileTemplate = data.csv.template
-datafileMask = 20<index>.data.csv
-samplingTime = 5 sec
-
-[3M-gps]
-moduleName = 3M
-moduleNumber = 55
-moduleType = 3M
-moduleComment = 3M_gps
-sensorGroup = gps
-sensorList = 3M.gps.sensors
-datafileTemplate = data.csv.template
-datafileMask = <index>.gps.csv
-samplingTime = 60 min
-
-[3M-sonic]
-moduleName = 3M
-moduleNumber = 55
-moduleType = 3M
-moduleComment = 3M_sonic
-sensorGroup = sonic
-sensorList = 3M.sonic.sensors
-datafileTemplate = data.csv.template
-datafileMask = <index>.sonic.csv
-samplingTime = 0.03125 sec
 
 [WTH-base]
 moduleName = WTH
