--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -824,7 +824,7 @@ moduleType = windtracer
 moduleComment = Windtracer20_base
 sensorGroup = base
 datafileMask = 20<index>_base.prd
-sensorList = WTX.base.sensors
+sensorList = WTX.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
 
@@ -835,7 +835,7 @@ moduleType = windtracer
 moduleComment = Windtracer20_spectral
 sensorGroup = spectral
 datafileMask = 20<index>_spectral.prd
-sensorList = WTX.spectral.sensors
+sensorList = WTX.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
 
