--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -860,3 +860,25 @@ sensorList = sodar.mnd.sensors
 datafileTemplate = 110221.mnd.template
 datafileMask = <index>.mnd
 samplingTime = 30 min
+
+[RS1]
+moduleName = RS1
+moduleNumber = 75
+moduleType = radiosonde
+moduleComment = rs_comment
+sensorGroup = txt
+sensorList = rs1.txt.sensors
+datafileTemplate = 110222.mnd.template
+datafileMask = CN<index>.txt
+samplingTime = 8 sec
+
+[RS2]
+moduleName = RS2
+moduleNumber = 76
+moduleType = radiosonde
+moduleComment = rs_comment
+sensorGroup = txt
+sensorList = rs2.txt.sensors
+datafileTemplate = 110221.mnd.template
+datafileMask = CN<index>.txt
+samplingTime = 8 sec
