--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -784,6 +784,8 @@ datafileTemplate = 200908261200.jpg.template
 datafileMask = kitcube_cc2_<index>.jpg
 samplingTime = 2 min
 
+
+; scintillometer
 [SCI]
 moduleName = SCI
 moduleNumber = 50
@@ -795,6 +797,8 @@ datafileTemplate = 100727.RES.template
 datafileMask = <index>.RES
 samplingTime = 1 min
 
+
+; lidars
 [WTH-base]
 moduleName = WTH
 moduleNumber = 60
@@ -802,7 +806,7 @@ moduleType = windtracer
 moduleComment = Windtracer20_base
 sensorGroup = base
 datafileMask = 20<index>_base.prd
-sensorList = WTH.base.sensors
+sensorList = WTH.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
 
@@ -813,15 +817,16 @@ moduleType = windtracer
 moduleComment = Windtracer20_spectral
 sensorGroup = spectral
 datafileMask = 20<index>_spectral.prd
-sensorList = WTH.spectral.sensors
+sensorList = WTH.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
+
 
 [WTX-base]
 moduleName = WTX
 moduleNumber = 61
 moduleType = windtracer
-moduleComment = Windtracer20_base
+moduleComment = Windtracer15_base
 sensorGroup = base
 datafileMask = 20<index>_base.prd
 sensorList = WTX.sensors
@@ -832,13 +837,15 @@ samplingTime = 10 min
 moduleName = WTX
 moduleNumber = 61
 moduleType = windtracer
-moduleComment = Windtracer20_spectral
+moduleComment = Windtracer15_spectral
 sensorGroup = spectral
 datafileMask = 20<index>_spectral.prd
 sensorList = WTX.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
 
+
+; humidity via GPS
 [GPS]
 moduleName = GPS
 moduleNumber = 65
@@ -850,6 +857,8 @@ datafileTemplate = kitk16230.tro.template
 datafileMask = kitk<index>.tro
 samplingTime = 15 min
 
+
+; sodar: wind profile
 [SOD]
 moduleName = SODAR
 moduleNumber = 70
@@ -857,10 +866,12 @@ moduleType = sodar
 moduleComment = sodar_comment
 sensorGroup = mnd
 sensorList = sodar.mnd.sensors
-datafileTemplate = 110221.mnd.template
+datafileTemplate = 110222.mnd.template
 datafileMask = <index>.mnd
 samplingTime = 30 min
 
+
+; radiosonden
 [RS1]
 moduleName = RS1
 moduleNumber = 75
@@ -868,7 +879,7 @@ moduleType = radiosonde
 moduleComment = rs_comment
 sensorGroup = txt
 sensorList = rs1.txt.sensors
-datafileTemplate = 110222.mnd.template
+datafileTemplate = CN010211.txt.template
 datafileMask = CN<index>.txt
 samplingTime = 8 sec
 
@@ -879,6 +890,6 @@ moduleType = radiosonde
 moduleComment = rs_comment
 sensorGroup = txt
 sensorList = rs2.txt.sensors
-datafileTemplate = 110221.mnd.template
+datafileTemplate = CN010211.txt.template
 datafileMask = CN<index>.txt
 samplingTime = 8 sec
