--- a/etc/rsync/Makefile.am
+++ b/etc/rsync/Makefile.am
@@ -4,4 +4,5 @@
 
 EXTRA_DIST = mast-append-filter \
 	sci-append-filter \
-	sod-append-filter sod-sync-filter
+	sod-append-filter sod-sync-filter \
+	wtx-append-filter
