SOD: add function for creating data table name and change module name from SODAR to SOD

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -860,7 +860,7 @@ samplingTime = 15 min
 
 ; sodar: wind profile
 [SOD]
-moduleName = SODAR
+moduleName = SOD
 moduleNumber = 70
 moduleType = sodar
 moduleComment = sodar_comment
