axislist: remove inklination(GI) and wind direction(VD), add angle(A) and angle rate(AR), change old A to AB

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,9 +32,13 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = A B C DA DC DN E FC FH FM FV GI H KD KED KH KM KMS L LA MA MF MR MS MW N NE NF NO PA QR R SNR T TA V VD X XG XP XR Z
-A_name = sfcorif
-A_unit = 10^(-12)/m^(2/3)
+axis = A AR AB B C DA DC DN E FC FH FM FV H KD KED KH KM KMS L LA MA MF MR MS MW N NE NF NO PA QR R SNR T TA V X XG XP XR Z
+A_name = angle
+A_unit = degree
+AR_name = angle_rate
+AR_unit = degree/s
+AB_name = sfcorif
+AB_unit = 10^(-12)/m^(2/3)
 B_name = sfcotf
 B_unit = K^2/m^(2/3)
 C_name = isorif
@@ -55,8 +59,6 @@ FM_name = Humidity_flow
 FM_unit = g/m^2*s
 FV_name = Covariance
 FV_unit = m^2/s^2
-GI_name = Inklination
-GI_unit = grad
 H_name = Heigth
 H_unit = m
 KD_name = Duration
@@ -107,8 +109,6 @@ TA_unit = K
 TA_range = 0 400
 V_name = Wind_speed
 V_unit = m/s
-VD_name = Wind_direction
-VD_unit = grad
 X_name = Data
 X_unit = Byte
 XG_name = Data
