WC: add WC, handles only *.sta files yet

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -32,7 +32,7 @@ dbPassword = kitcube
 rsyncArgs = --append
 
 [Axis]
-axis = A AR AB B C DA DC DN E FC FH FM FV H KD KED KH KM KMS L LA MA MF MR MS MW N NE NF NO PA QR R SNR T TA V X XG XP XR Z
+axis = A AR AB B C DA DC DN E FC FH FM FV H KD KED KH KM KMS L LA MA MF MR MS MW N NE NF NO PA QR R SNR T TA V VAR X XG XP XR Z
 A_name = angle
 A_unit = degree
 AR_name = angle_rate
@@ -109,6 +109,8 @@ TA_unit = K
 TA_range = 0 400
 V_name = Wind_speed
 V_unit = m/s
+VAR_name = variance
+VAR_unit = m^2/s^2
 X_name = Data
 X_unit = Byte
 XG_name = Data
@@ -843,6 +845,19 @@ datafileMask = 20<index>_spectral.prd
 sensorList = WTX.sensors
 datafileTemplate = 20090729_134446_base.prd.template
 samplingTime = 10 min
+
+
+; windcube
+[WC]
+moduleName = WC
+moduleNumber = 62
+moduleType = windcube
+moduleComment = windcube_comment
+sensorGroup = sta
+sensorList = windcube.sta.sensors
+datafileTemplate = 110222.mnd.template
+datafileMask = WLS7-0038_<index>.sta
+samplingTime = 30 min
 
 
 ; humidity via GPS
