--- a/src/kitcube-devices/Makefile.am
+++ b/src/kitcube-devices/Makefile.am
@@ -20,6 +20,7 @@ libkitcube_devices_a_SOURCES = daqdevice.h daqdevice.cpp createdevice.h createde
 	gps.cpp gps.h \
 	sodar.cpp sodar.h \
 	radiosonde.cpp radiosonde.h \
+	windcube.cpp windcube.h \
 	syslog.h syslog.cpp lara.h lara.cpp
 
 libkitcube_devices_a_CXXFLAGS =
