added HATPRO device: 1st version with only a few of its sensor files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -21,10 +21,10 @@ samplingTime = 5 sec
 ; Global parameters for the whole setup related to the
 ; database connection.
 [Common]
-configDir = ../../etc
-dataDir = ../../../data
-remoteDir = ../../../data
-archiveDir = ../../../archive
+configDir = /home/flating/projekte/kitcube/kitcube-tools/etc
+dataDir = /home/flating/projekte/kitcube/data
+remoteDir = /home/flating/projekte/kitcube/data
+archiveDir = /home/flating/projekte/kitcube/archive
 ;dbHost = localhost
 ;dbName = kitcube_actual
 ;dbUser = root
@@ -907,4 +907,61 @@ sensorGroup = txt
 sensorList = rs2.txt.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = CN<index>.txt
+samplingTime = 8 sec
+
+
+; HATPRO
+[RPG-LWP]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = LWP
+sensorList = hatpro.lwp.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = ppi00_<index>.LWP.ASC
+samplingTime = 8 sec
+
+[RPG-IWV]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = IWV
+sensorList = hatpro.iwv.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = ppi00_<index>.IWV.ASC
+samplingTime = 8 sec
+
+[RPG-MET]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = MET
+sensorList = hatpro.met.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = ppi00_<index>.MET.ASC
+samplingTime = 8 sec
+
+[RPG-CBH]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = CBH
+sensorList = hatpro.cbh.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = ppi00_<index>.CBH.ASC
+samplingTime = 8 sec
+
+[RPG-HKD]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = HKD
+sensorList = hatpro.hkd.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = ppi00_<index>.HKD.ASC
 samplingTime = 8 sec
