change order of file types accordingly to sensor list and add STA sensor file

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -911,6 +911,28 @@ samplingTime = 8 sec
 
 
 ; HATPRO
+[RPG-CBH]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = CBH
+sensorList = hatpro.cbh.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = *_<index>.CBH.ASC
+samplingTime = 8 sec
+
+[RPG-HKD]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = HKD
+sensorList = hatpro.hkd.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = *_<index>.HKD.ASC
+samplingTime = 8 sec
+
 [RPG-LWP]
 moduleName = RPG
 moduleNumber = 80
@@ -941,27 +963,16 @@ moduleComment = hatpro_comment
 sensorGroup = MET
 sensorList = hatpro.met.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = ppi00_<index>.MET.ASC
+datafileMask = *_<index>.MET.ASC
 samplingTime = 8 sec
 
-[RPG-CBH]
+[RPG-STA]
 moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = CBH
-sensorList = hatpro.cbh.sensors
+sensorGroup = STA
+sensorList = hatpro.sta.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = ppi00_<index>.CBH.ASC
-samplingTime = 8 sec
-
-[RPG-HKD]
-moduleName = RPG
-moduleNumber = 80
-moduleType = hatpro
-moduleComment = hatpro_comment
-sensorGroup = HKD
-sensorList = hatpro.hkd.sensors
-datafileTemplate = CN010211.txt.template
-datafileMask = ppi00_<index>.HKD.ASC
+datafileMask = *_<index>.STA.ASC
 samplingTime = 8 sec
