add some special stuff for TPC profiles, NOT YET FINISHED!!!

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -976,3 +976,14 @@ sensorList = hatpro.sta.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.STA.ASC
 samplingTime = 8 sec
+
+[RPG-TPC]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = TPC
+sensorList = hatpro.tpc.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = *_<index>.TPC.ASC
+samplingTime = 8 sec
