HATPRO: added handling of TPB files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -977,6 +977,17 @@ datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.STA.ASC
 samplingTime = 8 sec
 
+[RPG-TPB]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = TPB
+sensorList = hatpro.tpb.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = *_<index>.TPB.ASC
+samplingTime = 8 sec
+
 [RPG-TPC]
 moduleName = RPG
 moduleNumber = 80
