HATPRO: added handling of LPR files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -933,17 +933,6 @@ datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.HKD.ASC
 samplingTime = 8 sec
 
-[RPG-LWP]
-moduleName = RPG
-moduleNumber = 80
-moduleType = hatpro
-moduleComment = hatpro_comment
-sensorGroup = LWP
-sensorList = hatpro.lwp.sensors
-datafileTemplate = CN010211.txt.template
-datafileMask = ppi00_<index>.LWP.ASC
-samplingTime = 8 sec
-
 [RPG-IWV]
 moduleName = RPG
 moduleNumber = 80
@@ -953,6 +942,28 @@ sensorGroup = IWV
 sensorList = hatpro.iwv.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = ppi00_<index>.IWV.ASC
+samplingTime = 8 sec
+
+[RPG-LPR]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = LPR
+sensorList = hatpro.lpr.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = *_<index>.LPR.ASC
+samplingTime = 8 sec
+
+[RPG-LWP]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = LWP
+sensorList = hatpro.lwp.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = ppi00_<index>.LWP.ASC
 samplingTime = 8 sec
 
 [RPG-MET]
