HATPRO: added handling of CMP.TPC files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -922,6 +922,17 @@ datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.CBH.ASC
 samplingTime = 8 sec
 
+[RPG-CMP]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = CMP
+sensorList = hatpro.cmp.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = *_<index>.CMP.TPC.ASC
+samplingTime = 8 sec
+
 [RPG-HKD]
 moduleName = RPG
 moduleNumber = 80
