HATPRO: added handling of PPI, RHI, VER and VOL types of IWV and LWP files
- added new sensor files
- addec new entries in kitcube.ini
- added call of DAQDevice::getFileNumber() for IWV and LWP files
- changed call of readData and create_data_table_name for IWV and LWP files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -944,15 +944,48 @@ datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.HKD.ASC
 samplingTime = 8 sec
 
-[RPG-IWV]
+[RPG-IWV-PPI]
 moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
 sensorGroup = IWV
-sensorList = hatpro.iwv.sensors
+sensorList = hatpro.iwv.ppi.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = ppi00_<index>.IWV.ASC
+datafileMask = ppi_<index>.IWV.ASC
+samplingTime = 8 sec
+
+[RPG-IWV-RHI]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = IWV
+sensorList = hatpro.iwv.rhi.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = rhi_<index>.IWV.ASC
+samplingTime = 8 sec
+
+[RPG-IWV-VER]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = IWV
+sensorList = hatpro.iwv.ver.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = vertical_<index>.IWV.ASC
+samplingTime = 8 sec
+
+[RPG-IWV-VOL]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = IWV
+sensorList = hatpro.iwv.vol.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = vol_<index>.IWV.ASC
 samplingTime = 8 sec
 
 [RPG-LPR]
@@ -966,15 +999,48 @@ datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.LPR.ASC
 samplingTime = 8 sec
 
-[RPG-LWP]
+[RPG-LWP-PPI]
 moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
 sensorGroup = LWP
-sensorList = hatpro.lwp.sensors
+sensorList = hatpro.lwp.ppi.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = ppi00_<index>.LWP.ASC
+datafileMask = ppi_<index>.LWP.ASC
+samplingTime = 8 sec
+
+[RPG-LWP-RHI]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = LWP
+sensorList = hatpro.lwp.rhi.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = rhi_<index>.LWP.ASC
+samplingTime = 8 sec
+
+[RPG-LWP-VER]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = LWP
+sensorList = hatpro.lwp.ver.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = vertical_<index>.LWP.ASC
+samplingTime = 8 sec
+
+[RPG-LWP-VOL]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = LWP
+sensorList = hatpro.lwp.vol.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = vol_<index>.LWP.ASC
 samplingTime = 8 sec
 
 [RPG-MET]
