HATPRO: add handling of HPC files, read "number of samples" from files and change "while"- to "for"loop when reading files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -944,6 +944,17 @@ datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.HKD.ASC
 samplingTime = 8 sec
 
+[RPG-HPC]
+moduleName = RPG
+moduleNumber = 80
+moduleType = hatpro
+moduleComment = hatpro_comment
+sensorGroup = HPC
+sensorList = hatpro.hpc.sensors
+datafileTemplate = CN010211.txt.template
+datafileMask = *_<index>.HPC.ASC
+samplingTime = 8 sec
+
 [RPG-IWV-PPI]
 moduleName = RPG
 moduleNumber = 80
