HATPRO: add different sensor groups for PPI, RHI, VER and VOL files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -960,7 +960,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = IWV
+sensorGroup = IWV_PPI
 sensorList = hatpro.iwv.ppi.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = ppi_<index>.IWV.ASC
@@ -971,7 +971,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = IWV
+sensorGroup = IWV_RHI
 sensorList = hatpro.iwv.rhi.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = rhi_<index>.IWV.ASC
@@ -982,7 +982,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = IWV
+sensorGroup = IWV_VER
 sensorList = hatpro.iwv.ver.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = vertical_<index>.IWV.ASC
@@ -993,7 +993,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = IWV
+sensorGroup = IWV_VOL
 sensorList = hatpro.iwv.vol.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = vol_<index>.IWV.ASC
@@ -1015,7 +1015,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = LWP
+sensorGroup = LWP_PPI
 sensorList = hatpro.lwp.ppi.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = ppi_<index>.LWP.ASC
@@ -1026,7 +1026,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = LWP
+sensorGroup = LWP_RHI
 sensorList = hatpro.lwp.rhi.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = rhi_<index>.LWP.ASC
@@ -1037,7 +1037,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = LWP
+sensorGroup = LWP_VER
 sensorList = hatpro.lwp.ver.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = vertical_<index>.LWP.ASC
@@ -1048,7 +1048,7 @@ moduleName = RPG
 moduleNumber = 80
 moduleType = hatpro
 moduleComment = hatpro_comment
-sensorGroup = LWP
+sensorGroup = LWP_VOL
 sensorList = hatpro.lwp.vol.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = vol_<index>.LWP.ASC
