HATPRO: add sync filter file

--- a/etc/rsync/Makefile.am
+++ b/etc/rsync/Makefile.am
@@ -5,4 +5,4 @@
 EXTRA_DIST = mast-append-filter \
 	sci-append-filter \
 	sod-append-filter sod-sync-filter \
-	wtx-append-filter
+	wtx-append-filter rpg-append-filter
