add WC filter file to DIST

--- a/etc/rsync/Makefile.am
+++ b/etc/rsync/Makefile.am
@@ -5,4 +5,5 @@
 EXTRA_DIST = mast-append-filter \
 	sci-append-filter \
 	sod-append-filter sod-sync-filter \
-	wtx-append-filter rpg-append-filter
+	wtx-append-filter wc-append-filter \
+	rpg-append-filter
