CC: added filter file to sync files via standard rsync script and added script to shrink images

--- a/etc/rsync/Makefile.am
+++ b/etc/rsync/Makefile.am
@@ -2,7 +2,7 @@
 #
 
 
-EXTRA_DIST = mast-append-filter \
+EXTRA_DIST = mast-append-filter cc-append-filter \
 	sci-append-filter \
 	sod-append-filter sod-sync-filter \
 	wtx-append-filter wc-append-filter \
