RS: small fix for longer timestamps, new filename masks in *.ini files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -1005,7 +1005,7 @@ moduleComment = rs_comment
 sensorGroup = txt
 sensorList = rs1.txt.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = CN<index>.txt
+datafileMask = Hatzenbuehl_Radiosonde_<index>.txt
 samplingTime = 8 sec
 
 [RS2]
@@ -1016,7 +1016,7 @@ moduleComment = rs_comment
 sensorGroup = txt
 sensorList = rs2.txt.sensors
 datafileTemplate = CN010211.txt.template
-datafileMask = CN<index>.txt
+datafileMask = Hatzenbuehl_Radiosonde_<index>.txt
 samplingTime = 8 sec
 
 
