WC: add handling of rtd binary files

--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -958,7 +958,7 @@ samplingTime = 10 min
 
 
 ; windcube
-[WC]
+[WC-sta]
 moduleName = WC
 moduleNumber = 62
 moduleType = windcube
@@ -967,6 +967,17 @@ sensorGroup = sta
 sensorList = windcube.sta.sensors
 datafileTemplate = 110222.mnd.template
 datafileMask = WLS7-0038_<index>.sta
+samplingTime = 30 min
+
+[WC-rtd]
+moduleName = WC
+moduleNumber = 62
+moduleType = windcube
+moduleComment = windcube_comment
+sensorGroup = rtd
+sensorList = windcube.rtd.sensors
+datafileTemplate = 110222.mnd.template
+datafileMask = WLS7-0038_<index>.rtd
 samplingTime = 30 min
 
 
