Lot's of changes done for the inauguration version (V0.22/0.23)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,9 @@
 # not a GNU package. You can remove this line, if
 # have all needed files, that a GNU package needs
+ACLOCAL_AMFLAGS = -I m4
 AUTOMAKE_OPTIONS = foreign 1.4
 
-SUBDIRS = bin etc etc/rsync src 
+SUBDIRS = bin etc src 
 
 EXTRA_DIST = kitcube-tools.doxygen.in kitcube-tools.spec.in 
 
