--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -2,4 +2,7 @@
 #
 
 
-EXTRA_DIST = resize_cc2.sh sync_files.sh wget_files.sh
+EXTRA_DIST = sync_files.sh sync_push.sh \
+	resize_cc2.sh wget_files.sh \
+	chk_alarm.sh send_heartbeat.sh 
+
