--- a/etc/katrin.ini
+++ b/etc/katrin.ini
@@ -9,7 +9,8 @@ module = Lara
 
 ; Reading data and filling in the database
 [Reader]
-module = Lara Lara-Run
+module = PAC
+;module = Lara Lara-Run
 ;module = Lara-Run
 ;samplingTime = 1 min
 samplingTime = 5 sec
@@ -22,17 +23,19 @@ project = katrin
 configDir = ../../etc
 dataDir = ../../../data
 remoteDir = ../../../data
-archiveDir = ../../../archive
+archiveDir = /Users/kopmann/Data/katrin
 ;dbHost = localhost
-;dbName = kitcube_actual
+dbName = KATRIN_File_Reader // ORCA Slow Control ???
 ;dbUser = root
 ;dbPassword = 
-rsyncArgs = --append  
+useTicks = no
  
 [Axis]
-axis = E GP GU H JE K KD Q QR T TA  X XR
+axis = E EIN GP GU H JE K KD Q QR T TA  X XR
 E_name = Voltage
 E_unit = V
+EIN_name = Current
+EIN_unit = nA
 GP_name = Position
 GP_unit = mm
 GU_name = Width
@@ -74,6 +77,14 @@ XR_unit = %
 ; Definition of modules that can be used by the module parameter of the applications
 ;
 
+[PAC]
+moduleType = OrcaProcess
+moduleNumber = 1
+moduleName = PAC
+moduleComment = FPD Preamplifier Controller
+sensorGroup = dat
+sensorList = pac.sensors
+datafileMask = pac-<index>
 
 [Lara]
 moduleType = Lara
