--- a/etc/kitcube.ini
+++ b/etc/kitcube.ini
@@ -5,30 +5,48 @@
 
 ; Data server for simulation of device data
 [DataServer]
-module = Mast12-calc
+;module = Mast12-calc
 ;module = Mast01
-;module = Simuation
+module = Simulation Sim-2
 ;module = Ceilometer
 
 ; Reading data and filling in the database
 [Reader]
-;module = Mast12-calc
-module = Simulation
-;samplingTime = 1 min
+id = 1	; Every reader instamce needs an unique ID. The id is also 
+		; used for the monitoring server port of the reader
+;module = Wolkenkamera
+module = Simulation Sim-2
+samplingTime = 1 min
+;samplingTime = 3 sec
+
+
+[kcr-sim]
+id = 2
+module = Simulation Sim-2
 samplingTime = 5 sec
+
+[kcr-cm]
+id = 3
+module = Ceilometer
+samplingTime = 5 sec
+
+
 
 
 ; Global parameters for the whole setup related to the
 ; database connection.
 [Common]
-configDir = /home/flating/projekte/kitcube/kitcube-tools/etc
-dataDir = /home/flating/projekte/kitcube/data
+;project = kitcube
+;project = testproject
+configDir = ../../etc
+dataDir = /Users/kopmann/data/kitcube
 remoteDir = /home/flating/projekte/kitcube/data
-archiveDir = /home/flating/projekte/kitcube/archive
+archiveDir = /Users/kopmann/data/kitcube
 ;dbHost = localhost
 ;dbName = kitcube_actual
 ;dbUser = root
-dbPassword = kitcube
+;dbPassword = kitcube
+alarmDelay = 20 min
 
 [Axis]
 axis = A AR AB B C DA DC DN E FC FH FM FV H KD KED KH KM KMS L LA MA MF MR MS MW N NE NF NO PA QR R SNR T TA V VAR X XG XP XR Z
@@ -804,20 +822,6 @@ datafileTemplate = 20090625.chm.template
 datafileMask = chm20<index>.dat
 samplingTime = 1 sec
 
-[Simulation]
-moduleType = SimRandom
-moduleNumber = 101
-
-[Norbert]
-moduleType = Norbert
-moduleNumber = 190
-moduleName = NF
-moduleComment = Norbert's Testgeraet
-sensorGroup = dat
-sensorList = norbert.dat.sensors
-datafileTemplate = norbert.dat.template
-datafileMask = 20<index>.dat
-samplingTime = 1 sec
 
 [JWD-dd]
 moduleName = JWD
@@ -886,7 +890,7 @@ datafileMask = w20<index>.dat
 samplingTime = 1 min
 
 [Wolkenkamera]
-moduleName = Wolkenkamera
+moduleName = CC2
 moduleNumber = 45
 moduleType = Wolkenkamera
 moduleComment = Wolkenkamera_comment
@@ -895,6 +899,18 @@ sensorList = wolkenkamera.jpg.sensors
 datafileTemplate = 200908261200.jpg.template
 datafileMask = kitcube_cc2_<index>.jpg
 samplingTime = 2 min
+
+[Wolkenkamera]
+moduleName = CC2
+moduleNumber = 45
+moduleType = Wolkenkamera.statistic
+moduleComment = Wolkenkamera_comment
+sensorGroup = stat 
+sensorList = wolkenkamera.stat.sensors
+datafileTemplate = 200908261200.stat.template
+datafileMask = kitcube_cc2_<index>.jpg
+samplingTime = 2 min
+
 
 
 ; scintillometer
@@ -1218,3 +1234,48 @@ sensorList = hatpro.tpc.sensors
 datafileTemplate = CN010211.txt.template
 datafileMask = *_<index>.TPC.ASC
 samplingTime = 8 sec
+
+
+
+;
+; Test configurations
+;
+
+[Mast-sample]
+moduleName = M09
+moduleNumber = 9
+moduleType = Mast
+moduleComment = Test_mast_9
+sensorGroup = DAR
+datafileMask = M09_<index>.DAR
+sensorList = M01_01.DAR.sensors
+datafileTemplate = M01_01.DAR.template
+samplingTime = 1 sec
+
+
+[Simulation]
+moduleType = SimRandom
+moduleNumber = 199
+alarmDelay =  30 sec
+python = CC2 mean
+
+
+[Sim-2]
+moduleType = SimRandom
+moduleNumber = 198
+
+
+[Norbert]
+moduleType = Norbert
+moduleNumber = 190
+moduleName = NF
+moduleComment = Norbert's Testgeraet
+sensorGroup = dat
+sensorList = norbert.dat.sensors
+datafileTemplate = norbert.dat.template
+datafileMask = 20<index>.dat
+samplingTime = 1 sec
+
+[SysLog]
+alarmDelay = no
+
