--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,6 +1,6 @@
 
-SUBDIRS = ../fdhwlib/src/akutil kitcube-devices kitcube-data kitcube-reader
+SUBDIRS = akutil kitcube-devices kitcube-data kitcube-reader
 
-EXTRA_DIST = ../fdhwlib/src/fdhwlib.h
+EXTRA_DIST = fdhwlib.h
 
  
