--- a/src/kitcube-reader/Makefile.am
+++ b/src/kitcube-reader/Makefile.am
@@ -6,11 +6,11 @@ EXTRA_DIST = kitcube.ini
 
 
 if USE_MYSQL
-MYSQL_TARGETS = kitcube-reader-mysql
+MYSQL_TARGETS = kitcube-reader-mysql kitcube-monitor
 endif
 
 
-bin_PROGRAMS = kitcube-reader $(MYSQL_TARGETS)
+bin_PROGRAMS = kitcube-reader $(MYSQL_TARGETS) 
 kitcube_reader_SOURCES = kitcube-reader.cpp \
 			reader.h reader.cpp
 
@@ -19,15 +19,36 @@ INCLUDES= $(all_includes)
 
 
 # the library search path.
-kitcube_reader_LDFLAGS = $(all_libraries)  -L../kitcube-devices -L../../fdhwlib/src/akutil \
-			-lkitcube-devices  -lakutil $(ICONV_LIBS) -lnetcdf -lnetcdf_c++
+kitcube_reader_LDFLAGS = $(all_libraries)  -L../kitcube-devices -L../akutil \
+			-lkitcube-devices  -lakutil $(ICONV_LIBS) $(PYTHON_LIBS) -lnetcdf -lnetcdf_c++
 
+			
 
 if USE_MYSQL
 kitcube_reader_mysql_SOURCES = $(kitcube_reader_SOURCES)
 
 kitcube_reader_mysql_CXXFLAGS = -DUSE_MYSQL
 
-kitcube_reader_mysql_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) -L../kitcube-devices -L../../fdhwlib/src/akutil \
+kitcube_reader_mysql_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) $(PYTHON_LIBS) -L../kitcube-devices -L../akutil \
 				-lkitcube-devices-mysql  -lakutil $(ICONV_LIBS) -lnetcdf -lnetcdf_c++
+
+kitcube_monitor_SOURCES = kitcube-monitor.cpp
+
+kitcube_monitor_CXXFLAGS = -DUSE_MYSQL
+
+kitcube_monitor_LDFLAGS = $(all_libraries) $(MYSQL_LIBS) $(PYTHON_LIBS) -L../kitcube-devices -L../akutil \
+				-lkitcube-devices-mysql -lakutil
+
 endif
+
+
+# Make copies of the reader for startup scriptes
+#all: kcr-mast kcr-3M kcr-cm kcr-cc kcr-gps kcr-rs kcr-hatpro kcr-sim
+
+#kcr-%: kitcube-reader-mysql
+#	rm -f $@ 
+#	ln $< $@
+
+
+ 
+
